kubernetes/deploys-to-cluster/ingress-monitoring/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  namespace: monitoring    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.dexops.site
    secretName: grafana-dexops-site-tls  
  rules:  
  - host: grafana.dexops.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
