kubernetes/deploys-to-cluster/ingress-monitoring/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "secret-prometheus-passwd"
    nginx.ingress.kubernetes.io/auth-realm: "Autenticacao necessaria"    
  namespace: monitoring    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.dexops.site
    secretName: prometheus-dexops-site-tls
  rules:  
  - host: prometheus.dexops.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
